--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
       crossorigin="anonymous"
     />
 
-    <title>Github Finder</title>
+    <title>Gitoogle</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
